--- a/Password Generator Extension/manifest.json
+++ b/Password Generator Extension/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Sleettz Password Generator",
+    "name": "HL Password Generator",
     "version": "1.0",
     "description": "Advanced password generator with custom options and recent passwords.",
     "action": {
